--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
     "nanoid": "^5.0.7",
+    "rctx-contextmenu": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
